--- a/index.html
+++ b/index.html
@@ -12,22 +12,21 @@
 <body>
     <header>Teste Dojo-puzzle</header>
     <section class="Container">
-        <section>
+        <section class="card-item">
             <p>1° Teste</p> 
             <p>Link do teste: <a href="http://dojopuzzles.com/problemas/exibe/palavras-primas" target="_blank">Teste 1 </a> </p>
             <div id="resolucionOne">Resolução</div>
-            <section>
-                <label for=""></label>
-                <input id="letterFist" type="text" maxlength="1">
-                <label for=""></label>
-                <input id="letterSec" type="text" maxlength="1">
+            <section >
+                <label for="">letra 1</label>
+                <input id="firstChar" type="text" maxlength="1">
+                <label for="">Letra 2</label>
+                <input id="secChar" type="text" maxlength="1">
                 <button id="sendLetter" type="button" class="btn btn-primary">É Numero primo ? </button>
             </section>
 
         </section>
     </section>
-    <!-- <script src="./node_modules/bootstrap/js/src/index.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+
     <script src="./js/script.js"></script>
     </body>
 </html>
