--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
             <p>1° Teste</p> 
             <p>Link do teste: <a href="http://dojopuzzles.com/problemas/exibe/palavras-primas" target="_blank">Teste 1 </a> </p>
             <div id="resolucionOne">Resolução</div>
-            <section >
+            <section class="inputs-action" >
                 <label for="">letra 1</label>
                 <input id="firstChar" type="text" maxlength="1">
                 <label for="">Letra 2</label>
                 <input id="secChar" type="text" maxlength="1">
-                <button id="sendLetter" type="button" class="btn btn-primary">É Numero primo ? </button>
             </section>
+            <button id="sendLetter" type="button" class="btn btn-primary">É Numero primo ? </button>
+
+            <p class="as-or-not finaly" id="asPrime">É Primo!</p>
+            <p class="as-or-not finaly" id="notPrime">Não é Primo!</p>
 
         </section>
     </section>
